feat: write 1st post

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,13 @@
 ---
-name: Tails Azimuth
+name: TekLoon
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Software Engineer
+company: Power to the Brand
+email: tl@powertothebrand.sg
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+I think a lot, code often, and write sporadically, prioritizing thoughtful consideration and coding over extensive writing
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+So with this blog, I hope I can document more and build my second brain.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+"Passionate thinker, avid coder, and occasional wordsmith—I'm Tek Loon. With a mind that constantly churns with ideas, I dedicate ample time to thoughtful contemplation and coding endeavors. While my writing may be sporadic, each word is carefully chosen to convey the essence of my insights. Join me on a journey where contemplation meets code, and the written word serves as a deliberate reflection of my ever-evolving perspectives.". By ChatGPT 3.5
