feat: fix tag-data

--- a/data/blog/life/enjoy-what-you-did-not-buy.mdx
+++ b/data/blog/life/enjoy-what-you-did-not-buy.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Enjoy What You Did Not Buy'
+title: Enjoy What You Did Not Buy
 date: '2023-12-10'
 tags: ['personal-finance', 'calm', 'contentment']
-draft: true
+draft: false
 summary: A guide to stay content and calm when you see don't own something you want
 ---
 
