--- a/data/blog/life/enjoy-what-you-did-not-buy.mdx
+++ b/data/blog/life/enjoy-what-you-did-not-buy.mdx
@@ -3,25 +3,28 @@ title: Enjoy What You Did Not Buy
 date: '2023-12-10'
 tags: ['personal-finance', 'calm', 'contentment']
 draft: false
-summary: A guide to stay content and calm when you see don't own something you want
+summary: A guide to stay content and calm from materialistic world.
 ---
 
 We always want nice thing in our life, a bigger house, a more luxurious car or a luxurious products.
 
 However literally everyone living person in the earth unable to afford every single thing they want in their life.
 
-So how could you still feel content & calm when you saw the nice thing you want?
+So how could you still feel content & calm when you saw the nice thing you want but you can't afford?
 
 ## I did not spend on X, so I get to spend on Y
 
 I like pretty & luxurious car. But I rarely drive, that didn't feel right to buy a car but you don't drive.
 
 A single way that helped me feel content and calm after seeing other nice car is:
-`Because I did not spend on X, so I get to spend on Y`.
+
+> Because I did not spend on X, so I get to spend on Y
 
 The above statement is so helpful to make me feel rich and content. For e.g,
 
-- Because I did not spend on Mercedes-Benz, so I get to spend on living a better house.
-- Because I did not spend on Mercedes-Benz, so I get to spend on buying groceries at a better place.
+- Because I did not spend on BMW, so I get to spend on living a better house.
+- Because I did not spend on BMW, so I get to spend on buying groceries at a better place.
+
+Using above statement help me justify what I get to enjoy because I did not spend that on some other stuff immediately bring me contentment and remind my purpose/goal.
 
 Let's stay content and calm.
