chore: update some styling

--- a/data/blog/book-reviews/effortless/introduction.mdx
+++ b/data/blog/book-reviews/effortless/introduction.mdx
@@ -3,7 +3,7 @@ title: Effortless - Introduction Chapter Review
 date: '2023-12-12'
 tags: ['personal-development', 'book-review', 'book-summary']
 draft: false
-summary: A guide to stay content and calm from materialistic world.
+summary: Bro, you try too hard. There must be an easier way
 ---
 
 # Effortless by Greg Mckeown
@@ -35,8 +35,7 @@ Let's explore these chapters together, uncovering the highlights, favorite momen
 ## Snippet that Sparkle
 
 > When the essentials become too hard to handle, you can either give up on them or you can find an easier way. 
-
-> Essentialism is about doing the right thing; Effortless is about doing them in the right way.
+Essentialism is about doing the right thing; Effortless is about doing them in the right way.
 
 This snippet resonate with me so much. How many times we overcomplicate the situation, and make thing harder than it was and end up exhaust ourselves.
 
