fix: rephrase some of the sentence

--- a/data/blog/book-reviews/effortless/introduction.mdx
+++ b/data/blog/book-reviews/effortless/introduction.mdx
@@ -37,9 +37,9 @@ Let's explore these chapters together, uncovering the highlights, favorite momen
 > When the essentials become too hard to handle, you can either give up on them or you can find an easier way. 
 Essentialism is about doing the right thing; Effortless is about doing them in the right way.
 
-This snippet resonate with me so much. How many times we overcomplicate the situation, and make thing harder than it was and end up exhaust ourselves.
+This snippet resonate with me so much. How many times we overcomplicate the situation, make thing harder than it was and end up exhaust ourselves.
 
-A good example would be in investing, where we try to time the market, and try to find the best stock and best time to invest in. 
+A good example would be in investing, where we try to time the market, try to find the best stock and best time to invest in. 
 
 When in reality, we should just invest in index fund and let the market do its thing.
 
