test: play with `diff`

--- a/data/blog/react/multiple-file-upload-in-html.mdx
+++ b/data/blog/react/multiple-file-upload-in-html.mdx
@@ -24,9 +24,9 @@ We could only select/upload one image file at a time with below code.
 
 We could enable multiple file selection by adding `multiple` attribute to the input element.
 
-```tsx
+```diff
 <input
-    multiple
+    +multiple
     className="hidden"
     type="file"
     accept="image/*"
